syntax = "proto3";
package proto;

import "google/protobuf/timestamp.proto";
option go_package = "/proto";

message BlockchainInfo {
string Network = 1;
string Version = 2;
int64 LatestBlockHeight  = 3;
google.protobuf.Timestamp GenesisTimeStamp = 4;
string ChainID = 5;
repeated int32 BlockTime = 6;
int32 BlockTimeStamp = 7;
int64 Height = 8;
int64 MaxBytes = 9;
bool syncing = 10;
}

message Height {
    int64 Height = 1;
}

message Envelope {
    repeated int32 EncryptionKeyIndexes = 1;
    bytes Nullifier = 2;
    bytes ProcessID = 3;
    bytes Package = 4;
    int64 ProcessHeight = 5;
    int64 GlobalHeight = 6;
    int64 TxHeight = 7;
}

message StoreBlock {
    bytes Hash = 1;
    int64 Height = 2;
    int64 NumTxs = 3;
    google.protobuf.Timestamp Time = 4;
    bytes Proposer = 5;
}

message Transaction {
    int64 Height = 1;
    uint32 Index = 2;
    bytes Tx = 3;
    int64 TxHeight = 4;
    bytes Nullifier = 5;
    bytes Hash = 6;
}

message ItemList {
    repeated bytes items = 1;
}

message StringList {
    repeated string items = 1;
}

message Validator {
    bytes Address = 1;
    // Bytes-representation of PubKey. Could be nested pubkey struct
    bytes PubKey = 2;
    int64 VotingPower = 3;
    int64 ProposerPriority = 4;
    Height height = 5;
}

message Process {
    string ID = 1;
    string EntityID = 2;
    Height LocalHeight = 3;
}

message HeightMap {
    map<string, int64> heights = 1;
}